@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Jan 2, 2010
+---------------------------------------------------------------------
+- Return stringified hook data when called from within templates, and the actual data otherwise.
+
 Thu, Dec 31, 2009
 ---------------------------------------------------------------------
 - Version 0.9.9a -- Happy New Year!
